# nonebot-plugin-blockwords

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-package.yml
nonebot_plugin_blockwords/: __init__.py  check.py  config.py  exception.py  hook.py  matcher.py  params.py  typings.py  utils.py
nonebot_plugin_blockwords/hook/: __init__.py  bot.py
tests/: conftest.py  fake.py  test_matcher.py  test_read_blockwords.py  test_resplace.py
