[tool.poetry]
name = "nonebot-plugin-blockwords"
version = "0.1.0"
description = "nonebot聊天屏蔽词插件"
authors = ["MelodyKnit <2711402357@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.1.1"
nonebot-plugin-localstore = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
