[tool.poetry]
name = "nonebot-plugin-blockwords"
version = "0.1.0"
description = "nonebot聊天屏蔽词插件"
authors = ["MelodyKnit <2711402357@qq.com>"]
license = "MIT"
keywords = [
    "bot",
    "qq",
    "qqbot",
    "mirai",
    "coolq",
    "nonebot2",
    "nonebot-plugin",
    "blockwords",
]
readme = "README.md"
packages = [{ include = "nonebot_plugin_blockwords" }]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.1.1"
nonebot-plugin-localstore = "^0.5.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.0.0"
ruff = ">=0.0.272,<1.0.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["nonebot_plugin_blockwords"]
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

line-length = 88
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
